--- a/webapp/view/MoedaDialog.fragment.xml
+++ b/webapp/view/MoedaDialog.fragment.xml
@@ -4,9 +4,9 @@
    <Dialog
 		id="MoedaDialog"
 		title="{view>/titulo}"
-		class="sapUiSmallMargin">
+		class="sapUiSmallMargin sapUiSizeCompact">
    	
-   		<VBox id="vBoxMoeda" class="sapUiSmallMargin sapUiSizeCompact">	
+   		<VBox id="vBoxMoeda" class="sapUiSmallMargin">	
 			<Label text="Código:" labelFor="codigo"/>
 			<Input value="{Codigo}" id="codigo" required="true" editable="{view>/codigoEdit}"/>
 			
@@ -18,8 +18,8 @@
 		</VBox>
    		
    		<buttons>
-   			<Button text="Salvar" press="onSaveDialog"/>
-   			<Button text="Fechar" press="onCloseDialog"/>
+   			<Button text="Salvar" press="onSaveDialog" type="Accept"/>
+   			<Button text="Fechar" press="onCloseDialog" type="Reject"/>
    		</buttons>
    </Dialog>
 </core:FragmentDefinition>
