--- a/webapp/view/Moeda.view.xml
+++ b/webapp/view/Moeda.view.xml
@@ -1,70 +1,65 @@
 <mvc:View controllerName="br.com.idxtecMoeda.controller.Moeda"
-xmlns:html="http://www.w3.org/1999/xhtml"
-xmlns:mvc="sap.ui.core.mvc"
-displayBlock="true"
-xmlns="sap.m"
-height="100%"
-width="100%"
-xmlns:t="sap.ui.table">
+	xmlns:html="http://www.w3.org/1999/xhtml"
+	xmlns:mvc="sap.ui.core.mvc"
+	displayBlock="true"
+	xmlns="sap.m"
+	height="100%"
+	width="100%"
+	xmlns:t="sap.ui.table">
 	<App>
 		<pages>
-			<Page showHeader="false">
+			<Page showHeader="false" class="sapUiContentPadding" enableScrolling="false">
 				<content>
-					<VBox class="sapUiSmallMargin">
-						<Panel headerText="Moeda">
-							<t:Table id="tableMoeda"
-								rows="{path: '/Moedas'}"
-								selectionMode="Single"
-								selectionBehavior="Row"
-								enableSelectAll="false"
-								editable="true"
-								visibleRowCountMode="Interactive"
-								enableBusyIndicator="true"
-								alternateRowColors="true"
-								enableCustomFilter="false">
-								<t:toolbar>
-									<Toolbar>
-										<Title text="Lista de Moedas"/>
-									</Toolbar>
-								</t:toolbar>
-								<t:columns>
-									<t:Column filterProperty="Codigo" sortProperty="Codigo">
-										<Label text="Código"/>
-										<t:template>
-											<Text text="{Codigo}"/>
-										</t:template>
-									</t:Column>
-									<t:Column filterProperty="Nome" sortProperty="Nome">
-										<Label text="Nome"/>
-										<t:template>
-											<Text text="{Nome}"/>
-										</t:template>
-									</t:Column>
-									<t:Column filterProperty="Simbolo" sortProperty="Simbolo">
-										<Label text="Símbolo"/>
-										<t:template>
-											<Text text="{Simbolo}"/>
-										</t:template>
-									</t:Column>
-								</t:columns>
-								<t:footer>
-									<Toolbar>
-										<Button icon="sap-icon://refresh" press="onRefresh"/>
-										<ToolbarSpacer/>
-										<Button icon="sap-icon://filter"/>
-										<Button icon="sap-icon://clear-filter"/>
-									</Toolbar>
-								</t:footer>
-							</t:Table>
-						</Panel>
-					</VBox> 
+					<t:Table id="tableMoeda"
+						rows="{
+							path: '/Moedas',
+							sorter: {
+								path: 'Nome'
+							}
+						}"
+						selectionMode="Single"
+						selectionBehavior="Row"
+						class="sapUiSizeCondensed"
+						visibleRowCountMode="Auto"
+						enableBusyIndicator="true"
+						alternateRowColors="true">
+						<t:toolbar>
+							<Toolbar>
+								<Title text="Lista de Moedas"/>
+								<ToolbarSpacer/>
+								<SearchField placeholder="Pesquisar moeda..." width="30%" search="filtraMoeda"/>
+							</Toolbar>
+						</t:toolbar>
+						<t:columns>
+							<t:Column filterProperty="Codigo" sortProperty="Codigo">
+								<Label text="Código"/>
+								<t:template>
+									<Text text="{Codigo}"/>
+								</t:template>
+							</t:Column>
+							<t:Column filterProperty="Nome" sortProperty="Nome">
+								<Label text="Nome"/>
+								<t:template>
+									<Text text="{Nome}"/>
+								</t:template>
+							</t:Column>
+							<t:Column filterProperty="Simbolo" sortProperty="Simbolo">
+								<Label text="Símbolo"/>
+								<t:template>
+									<Text text="{Simbolo}"/>
+								</t:template>
+							</t:Column>
+						</t:columns>
+					</t:Table>
 				</content>
 				<footer>
 					<Toolbar>
 						<ToolbarSpacer/>
-						<Button icon="sap-icon://add" id="incluir" text="Incluir novo" press="onIncluir"/>
-						<Button icon="sap-icon://edit" id="editar" text="Editar" press="onEditar"/>
-						<Button icon="sap-icon://delete" id="remover" text="Remover" press="onRemover"/>
+						<Button id="incluir" text="Incluir novo" press="onIncluir" type="Emphasized"/>
+						<Button id="editar" text="Editar" press="onEditar"/>
+						<Button id="remover" text="Remover" press="onRemover"/>
+						<ToolbarSeparator/>
+						<Button icon="sap-icon://refresh" press="onRefresh"/>
 					</Toolbar>
 				</footer>
 			</Page>
